# stock_ai

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
configs/: production_runtime.example.toml  semantic_stack.example.toml
docs/: 3_24_gpt_suggestions  ROADMAP_GITHUB_ISSUES.md  approach_differentiators.md  implementation_todo.md  k_swing_sentinel_v1_2.md  temporal_predictor_architecture.md
enc/: Model.py  __init__.py  dod.py  example.py  exp1.ipynb  utils.py
pytest/: __init__.py  __main__.py
scripts/: build_krx_universe.py  collect_fdr_from_universe.py  collect_fdr_from_universe_with_eta.py  collect_fdr_training_data.py  collect_intraday_from_universe.py  collect_intraday_from_universe_with_eta.py  collect_intraday_training_data.py  smoke_test_grok.py
src/: pydantic.py
tests/: test_audit_log.py  test_backtester_portfolio.py  test_backtester_realism.py  test_broker_gateway.py  test_calendar_pause.py  test_calibration_predictor.py  test_contract_examples.py  test_contracts_search_refinement_surface.py  test_cost_model.py  test_degraded_mode.py  test_event_store_lineage.py  test_execution_mapper_conservative.py  test_fdr_dataset.py  test_feature_store_context.py  test_flow_leakage.py  test_intraday_dataset.py  test_label_builder.py  test_label_builder_extensions.py  test_live_direct_vectorization.py  test_llm_provider_path.py  test_no_lookahead.py  test_orchestration_resilience.py  test_predictor_artifact_schema.py  test_production_runtime.py  test_risk_portfolio.py  test_schema_validation.py  test_session_boundaries_extended.py  (+11 more)
(+58 files in other folders)
