[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k-swing-sentinel"
version = "0.1.0"
description = "Production-oriented KRX/NXT swing trading system scaffold"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
