[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k-swing-sentinel"
version = "0.1.0"
description = "Production-oriented KRX/NXT swing trading system scaffold"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
llm = ["httpx>=0.27"]
ml = ["transformers>=4.45", "torch>=2.4"]
marketdata = ["finance-datareader>=0.9.110", "requests>=2.31", "yfinance>=0.2.54"]

[tool.pytest.ini_options]
pythonpath = ["src"]
